services/demo-shop/k8s/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-shop
  labels:
    app: demo-shop
spec:
  selector:
    matchLabels:
      app: demo-shop
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: demo-shop
      labels:
        app: demo-shop
    spec:
      automountServiceAccountToken: false
      containers:
        - name: demo-shop
          image: identinet/check-demo-shop:0.0.1
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: http
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
